fix:FEBE: apiルートの変更にともなう変更
